# ttwr

./: .gitignore  .travis.yml  README.md  USEPadmin.py  USEPmodels.py  USEPviews.py  admin.py  app_settings.py  dj-prj_usep-app.sh  extra.txt  forms.py  gitignore  manage.py  models.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  rome_data.json  rome_test_data.json  ruff.toml  run_integration_tests.py  run_tests.py  run_unit_tests.py  test.xml  tests.py  urls_app.py  views.py  widgets.py
.github/workflows/: NEW_tests.yml  tests.yml
config/: passenger_wsgi.py  urls.py
config/middleware/: turnstile_middleware.py  turnstile_view.py
config/settings/: base.py  local.py  production.py  staging.py  test.py  unit_tests.py
integration_tests/: tests.py
requirements/: base.in  base.txt  dev.txt  local.txt  production.txt  requirements.txt  requirements_dev.txt  requirements_prod.txt  staging.in  staging.txt  unit_tests.in  unit_tests.txt
rome_app/: admin.py  app_settings.py  forms.py  models.py  urls_app.py  views.py  widgets.py
rome_app/lib/: roles_checker.py  version_helper.py
rome_app/migrations/: 0001_initial.py  0001_squashed_0007_shop_slug.py  0001_squashed_0016_document_document_link.py  0002_auto_20170829_1009.py  0003_auto_20171206_0827.py  0004_auto_20171207_1100.py  0005_auto_20171214_1533.py  0006_shop.py  0007_shop_slug.py  0008_auto_20190710_1051.py  0008_auto_20190830_1002.py  0008_auto_20190830_1118.py  0009_auto_20190710_1053.py  0009_auto_20191022_1105.py  0010_auto_20190807_1026.py  (+6 more)
rome_templates/: OLD.html  about.html  books.html  essays.html  index.html  links.html  page.html  people.html  person_detail.html  prints.html  search.html  specific_essay.html  thumbnail_viewer.html
unit_tests/: responses_data.py  settings.py  test_middleware.py  test_models.py  test_views.py  tests.py
(+77 files in other folders)
